--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Tripto Afsin" />
+    <meta property="og:description" content="Be the change" />
+    <meta property="og:url" content="./index.html"/>
+    <meta property="og:site_name" content="Tripto Afsin" />
+    <meta property="og:image" content="https://i.imgur.com/m8m6d8L.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tripto Intro</title>
+    <title>Tripto Afsin | Bet the change</title>
     <link rel="stylesheet" href="./css/style.css">
     <style type="text/css">
         body{
@@ -37,9 +44,9 @@
     </div>
 
     <div class="works-container">
-        <a href="https://www.facebook.com/Tripto.Afsin" target="blank">Projects</a>
-        <a href="https://www.linkedin.com/in/triptoafsin/" target="blank">CV</a>
-        <a href="https://www.facebook.com/Tripto.Afsin" target="blank">Experience</a>
+        <a href="./NA.html" target="blank">Projects</a>
+        <a href="./NA.html" target="blank">CV</a>
+        <a href="./NA.html" target="blank">Experience</a>
     </div>
     
 
