--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             
         </h1>
         <h2>
-            I'm a <span class="txt-type" data-wait="2000" data-words='["Software Developer", "Learner", "Cricket Lover", "Teacher", "Designer"]' id="txt-type"></span>
+            I'm a <span class="txt-type" data-wait="2000" data-words='["Developer", "Learner", "Cricket Lover", "Teacher", "Designer"]' id="txt-type"></span>
         </h2>
 
 
